--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,10 @@
+body {
+    margin: 0px;
+}
+
 canvas {
     background-color: rebeccapurple;
+    max-width: 100vw;
+    max-height: 100vh;
+    aspect-ratio: 128/72;
 }
